2000-11-27  Rafael Laboissiere  <rafael@icp.inpg.fr>

	* configure.in, Makefile.am: Added Info translation.

2000-11-26  Rafael Laboissiere  <rafael@icp.inpg.fr>

	* Makefile.am ($(TARBALL)): Include PDF file.
	* configure.in: Check program pdfjadetex.

2000-11-25  Rafael Laboissiere  <rafael@icp.inpg.fr>

	* Changes to allow the web page to show the sizes of the files
	available for download.  File bin/size-href.pl is included in the
	package. 
	* configure.in (AC_OUTPUT): Output www/index.html.in.
	* Makefile.am (www/index.html): Added rule.
	($(TARBALL)): Depends only on $(INDEX_HTML).

	* Makefile.am (dist-stamp): New rule for avoiding the repetitive
	generation of the source tarball.
	(CLEANFILES): Added *-stamp.

2000-11-24  Rafael Laboissiere  <rafael@icp.inpg.fr>

	* Makefile.am (www-install): Broken down into smaller rules.  The
	HTML tarball is now decompacted at the WWW host.  Better
	CLEANFILES.

	* configure.in (AM_INIT_AUTOMAKE): Bumped package version to
	0.2.1.

	* configure.in (AM_INIT_AUTOMAKE): Bumped package version to
	0.2.0.

	* Makefile.am (www-install): Added dvi file to web site tarball.

2000-11-24  Alan W, Irwin  <irwin@beluga.phys.uvic.ca>

        * configure.in: Update to docbook 4.1.

2000-11-21  Rafael Laboissiere  <rafael@icp.inpg.fr>

        * configure.in: Fixed mess with WWW_USER and WWW_HOST

2000-11-19  Rafael Laboissiere  <rafael@icp.inpg.fr>

	* Released overhauled version with Automake support and XML
	translation. 